fix small bug where profile sidebar columns were sometimes mis-aligned

--- a/assets/css/_profile.scss
+++ b/assets/css/_profile.scss
@@ -23,6 +23,11 @@
   @extend .mx-auto;
 }
 
+// fixes bug where sometime bottom of card block is the page bg color
+.profile-sidebar .card-block {
+  background-color: $card-bg;
+}
+
 
 // Table styles
 .profile-data {
